--- a/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
+++ b/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
@@ -89,8 +89,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total tickers fetched: 7458\n",
-      "First 20 tickers: ['BNJ', 'FSUN', 'DKS', 'AGNCL', 'BNH', 'DKNG', 'DKL', 'DK', 'FSS', 'TNON', 'TNONW', 'DJTWW', 'ASIX', 'FRD', 'DJT', 'FMC', 'IONX', 'IONS', 'FHN', 'IONR']\n"
+      "Total tickers fetched: 7470\n",
+      "First 20 tickers: ['KTF', 'KTH', 'KTTA', 'KUKE', 'KULR', 'KVAC', 'KVHI', 'KWE', 'KWESW', 'KXIN', 'KZIA', 'LAES', 'LANDM', 'LANDO', 'LANDP', 'LANV', 'LAR', 'LASE', 'LAYS', 'LAZR']\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching OHLC data from 2002-01-01 to 2025-04-05 (approx. 1260 trading days)\n"
+      "Fetching OHLC data from 2002-01-01 to 2025-04-08 (approx. 1260 trading days)\n"
      ]
     }
    ],
@@ -143,9 +143,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Alpaca Download Progress:  74%|███████▍  | 130/175 [00:58<00:20,  2.24it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Use existing fetch utility for historical OHLC\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m historical_df = \u001b[43mfetch_alpaca_historical_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43malpaca\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubset_tickers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myears_back\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mFetched \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(historical_df)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m rows of historical OHLC data.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(historical_df.head(\u001b[32m10\u001b[39m))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\dev\\stat_656_autotrader\\src\\utils\\alpaca_utils.py:74\u001b[39m, in \u001b[36mfetch_alpaca_historical_data\u001b[39m\u001b[34m(alpaca_client, tickers, start_date, end_date, years_back)\u001b[39m\n\u001b[32m     71\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     72\u001b[39m         missing_data_count += \u001b[32m1\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m74\u001b[39m     time.sleep(\u001b[32m1\u001b[39m)  \u001b[38;5;66;03m# Avoid rate limiting\u001b[39;00m\n\u001b[32m     75\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     76\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mError for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mticker\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "# Use existing fetch utility for historical OHLC\n",
     "historical_df = fetch_alpaca_historical_data(alpaca, subset_tickers, start_date, end_date, years_back)\n",
