Updateing all recent changes to tutorial.

--- a/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
+++ b/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project root added to sys.path: d:\\dev\\stat_656_autotrader\n"
+      "Project root added to sys.path: /home/aaronnhorvitz/dev/school/stat_656_autotrader\n"
      ]
     }
    ],
@@ -82,15 +82,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total tickers fetched: 7470\n",
-      "First 20 tickers: ['KTF', 'KTH', 'KTTA', 'KUKE', 'KULR', 'KVAC', 'KVHI', 'KWE', 'KWESW', 'KXIN', 'KZIA', 'LAES', 'LANDM', 'LANDO', 'LANDP', 'LANV', 'LAR', 'LASE', 'LAYS', 'LAZR']\n"
+      "Total tickers fetched: 7465\n",
+      "First 20 tickers: ['CNTX', 'CNTM', 'DGXX', 'GVH', 'GV', 'CNTB', 'DHAI', 'APCX', 'GUT', 'DHAIW', 'CNOBP', 'DHCNL', 'CNL', 'DHF', 'CNFRZ', 'CNFR', 'AP', 'AOUT', 'DISTR', 'GURE']\n"
      ]
     }
    ],
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching OHLC data from 2002-01-01 to 2025-04-08 (approx. 1260 trading days)\n"
+      "Fetching OHLC data from 2002-01-01 to 2025-04-27 (approx. 1260 trading days)\n"
      ]
     }
    ],
@@ -143,26 +143,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Alpaca Download Progress:  74%|███████▍  | 130/175 [00:58<00:20,  2.24it/s]\n"
+      "Alpaca Download Progress: 100%|██████████| 175/175 [01:35<00:00,  1.84it/s]"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Use existing fetch utility for historical OHLC\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m historical_df = \u001b[43mfetch_alpaca_historical_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43malpaca\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubset_tickers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myears_back\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mFetched \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(historical_df)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m rows of historical OHLC data.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(historical_df.head(\u001b[32m10\u001b[39m))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32md:\\dev\\stat_656_autotrader\\src\\utils\\alpaca_utils.py:74\u001b[39m, in \u001b[36mfetch_alpaca_historical_data\u001b[39m\u001b[34m(alpaca_client, tickers, start_date, end_date, years_back)\u001b[39m\n\u001b[32m     71\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     72\u001b[39m         missing_data_count += \u001b[32m1\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m74\u001b[39m     time.sleep(\u001b[32m1\u001b[39m)  \u001b[38;5;66;03m# Avoid rate limiting\u001b[39;00m\n\u001b[32m     75\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m     76\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mError for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mticker\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fetched 139235 rows of stock data in 95.11 seconds.\n",
+      "Processed 175 tickers, missing 108 tickers, 108 tickers did not have enough time.\n",
+      "Processing time per ticker: 0.54 seconds.\n",
+      "\n",
+      "Fetched 139235 rows of historical OHLC data.\n",
+      "  ticker        date    open    high     low  close\n",
+      "0    GUT  2016-01-04  5.6800  5.7100  5.6500   5.71\n",
+      "1    GUT  2016-01-05  5.7400  5.7600  5.6898   5.72\n",
+      "2    GUT  2016-01-06  5.7200  5.7600  5.7000   5.71\n",
+      "3    GUT  2016-01-07  5.6700  5.7000  5.6500   5.70\n",
+      "4    GUT  2016-01-08  5.7300  5.7500  5.6900   5.71\n",
+      "5    GUT  2016-01-11  5.7500  5.7597  5.6000   5.63\n",
+      "6    GUT  2016-01-12  5.6500  5.6500  5.5600   5.61\n",
+      "7    GUT  2016-01-13  5.6163  5.6604  5.6111   5.64\n",
+      "8    GUT  2016-01-14  5.6400  5.8400  5.6100   5.83\n",
+      "9    GUT  2016-01-15  5.4600  5.6300  5.4300   5.60\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -183,9 +201,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Alpaca Download Progress: 100%|██████████| 175/175 [03:04<00:00,  1.06s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fetched 0 rows of stock data in 184.87 seconds.\n",
+      "Processed 175 tickers, missing 175 tickers, 0 tickers did not have enough time.\n",
+      "Processing time per ticker: 1.06 seconds.\n",
+      "\n",
+      "Fetched OHLC data for yesterday (2025-04-27):\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "yesterday = (datetime.now() - timedelta(days=1)).strftime(\"%Y-%m-%d\")\n",
     "\n",
@@ -204,9 +252,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching Today's Open Prices: 100%|██████████| 175/175 [01:02<00:00,  2.80it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Today's Open Prices (2025-04-28):\n",
+      "  ticker        date    open\n",
+      "0   CNTM  2025-04-28  0.6535\n",
+      "0   DGXX  2025-04-28  1.1100\n",
+      "0     GV  2025-04-28  2.1392\n",
+      "0   CNTB  2025-04-28  0.8232\n",
+      "0   APCX  2025-04-28  0.2645\n",
+      "0    GUT  2025-04-28  5.2800\n",
+      "0   CNEY  2025-04-28  0.1270\n",
+      "0   GTEC  2025-04-28  1.6650\n",
+      "0    ANY  2025-04-28  0.5766\n",
+      "0    EAF  2025-04-28  0.6563\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "today = datetime.now().strftime(\"%Y-%m-%d\")\n",
     "market_open_dt = pd.Timestamp(f\"{today}T09:30:00-05:00\")\n",
@@ -242,12 +324,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Real-Time Latest Bars (Market Open):\n",
+      "  ticker        date     open     high      low    close  volume\n",
+      "0   CLDI  2025-04-28   0.4700   0.4700   0.4700   0.4700     200\n",
+      "1   EICC  2025-04-23  24.9400  24.9400  24.9400  24.9400     150\n",
+      "2   MBIO  2025-04-28   1.1750   1.1750   1.1600   1.1600     300\n",
+      "3   CMSA  2025-04-28  21.3600  21.3600  21.3600  21.3600     387\n",
+      "4   GQQQ  2025-04-23  22.9600  22.9600  22.9600  22.9600     113\n",
+      "5    HQL  2025-04-28  12.4900  12.4900  12.4900  12.4900     200\n",
+      "6  IMPPP  2025-04-25  24.0000  24.0000  24.0000  24.0000     200\n",
+      "7   IMNN  2025-04-28   0.8601   0.8601   0.8601   0.8601     100\n",
+      "8  CNOBP  2025-04-15  21.8500  21.8500  21.8500  21.8500     488\n",
+      "9  HROWL  2025-04-25  25.2900  25.2900  25.2900  25.2900     100\n"
+     ]
+    }
+   ],
    "source": [
     "real_time_df = fetch_alpaca_latest_bars(alpaca, subset_tickers)\n",
     "\n",
     "print(\"\\nReal-Time Latest Bars (Market Open):\")\n",
-    "print(real_time_df.head(10))"
+    "print(real_time_dfxsds\n",
+    "      \n",
+    "      dddddddddd(1"
    ]
   },
   {
@@ -259,9 +363,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processed 10 tickers in 0.05 seconds.\n",
+      "Average time per ticker: 0.00 sec.\n",
+      "Estimated time for all tickers: 0.57 mins.\n"
+     ]
+    }
+   ],
    "source": [
     "# Simple diagnostics\n",
     "def performance_summary(start_time, num_tickers):\n",
